--- a/examples/01 Python Introduction.ipynb
+++ b/examples/01 Python Introduction.ipynb
@@ -38,12 +38,12 @@
       ],
       "metadata": {
         "id": "ZXm1C8coiQLi",
-        "outputId": "7527e3dd-6c2e-4233-fcca-0441e0e1b032",
+        "outputId": "8fdca847-a8cb-4e05-d93a-8d66c7237cc3",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 1,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
@@ -62,12 +62,12 @@
       ],
       "metadata": {
         "id": "g-w-oZbCibo0",
-        "outputId": "a13b7839-65a6-4427-8f97-12c1800ac0dc",
+        "outputId": "b4a849ad-e2fb-4337-91a9-1a00b52a1514",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 5,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "stream",
@@ -82,13 +82,27 @@
       "cell_type": "code",
       "source": [
         "# Now define a variable called 'name', assign it the value of your name, and introduce yourself via python!\n",
-        "\n"
+        "\n",
+        "name = 'Brigham Frandsen'\n",
+        "print(\"Hello, I'm {}!\".format(name))"
       ],
       "metadata": {
-        "id": "rL5_0GXoitxC"
+        "id": "rL5_0GXoitxC",
+        "outputId": "a7dbf042-9a8b-45a4-e93e-b155d21e6721",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Hello, I'm Brigham Frandsen!\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -101,14 +115,28 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 16,
       "metadata": {
-        "id": "I8h9a4W6fSE2"
+        "id": "I8h9a4W6fSE2",
+        "outputId": "eebd345d-0d8f-47ba-f4e4-f69320cff4a2",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "3.1416\n"
+          ]
+        }
+      ],
       "source": [
         "## Formatting Floats\n",
         "# method 1\n",
+        "c=3.141592653585\n",
+        "d = 1\n",
         "print(\"{:.2f}\".format(c*d)) # {} is the place holder for the argument.\n",
         "                            # defines the arguement. \":.2f\" means \"Round my output to 2 decimals\"\n",
         "                            # c*d is the argument being passed in."
@@ -116,22 +144,46 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 17,
       "metadata": {
-        "id": "XKf30Y3UfSE3"
+        "id": "XKf30Y3UfSE3",
+        "outputId": "aacc87ca-419e-4e46-daa9-28088d1acd32",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "I can use multiple placeholders.\n"
+          ]
+        }
+      ],
       "source": [
         "print(\"I can use {} {}.\".format(\"multiple\", \"placeholders\"))"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 18,
       "metadata": {
-        "id": "OJHBA899fSE3"
+        "id": "OJHBA899fSE3",
+        "outputId": "f5777930-c234-4f09-f450-c6d53f9a311c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "This is f-string (format string) 3.142\n"
+          ]
+        }
+      ],
       "source": [
         "# method 2\n",
         "print(f\"This is f-string (format string) {c*d:.3f}\")"
@@ -139,11 +191,73 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "source": [
+        "# use f-string to introduce yourself with your name:\n"
+      ],
       "metadata": {
-        "id": "jEcWlqBjfSE4"
+        "id": "UcQgJ8jytsyW",
+        "outputId": "d9c523c3-64c7-4b3b-c0f8-3af71b09e466",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Hello, my name is Brigham Frandsen!\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a = 4\n",
+        "b = 2\n"
+      ],
+      "metadata": {
+        "id": "sBYxq1Clu3G0",
+        "outputId": "884d6107-85b8-4db9-ecf7-a27b7097391d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 28,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "2"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 28
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 26,
+      "metadata": {
+        "id": "jEcWlqBjfSE4",
+        "outputId": "b817f129-074d-44ca-f492-044d87fa0c61",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "4**2 or pow(4,2) = 16\n"
+          ]
+        }
+      ],
       "source": [
         "# power\n",
         "print(f\"{a}**{b} or pow({a},{b}) = {a**b}\")"
@@ -151,23 +265,47 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 29,
       "metadata": {
-        "id": "iWIx2O3EfSE4"
+        "id": "iWIx2O3EfSE4",
+        "outputId": "b1cf3d4e-a31b-4a91-e967-a11204afe0ea",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "4%3 = 1\n"
+          ]
+        }
+      ],
       "source": [
         "# modulus is the remainder after division\n",
-        "print(f\"{b}%{a} = {b%a}\")"
+        "print(f\"{4}%{3} = {4%3}\")"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 30,
       "metadata": {
-        "id": "ToeT_eRMfSE5"
+        "id": "ToeT_eRMfSE5",
+        "outputId": "27e20da1-1468-41da-da63-91bfeec266c4",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Regular division results in: 2/4= 0.50\n"
+          ]
+        }
+      ],
       "source": [
         "# floor division rounds down to the nearest integer.\n",
         "print(f\"Regular division results in: {b}/{a}= {b/a:.2f}\")"
@@ -175,11 +313,23 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 31,
       "metadata": {
-        "id": "beHH3KiAfSE5"
+        "id": "beHH3KiAfSE5",
+        "outputId": "88739a24-b871-420f-c431-17ba72faaf84",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "While flooring: 2//4= 0 which is the same as int(0.50) = 0\n"
+          ]
+        }
+      ],
       "source": [
         "print(f\"While flooring: {b}//{a}= {b//a} which is the same as int({b/a:.2f}) = {int(b//a)}\")"
       ]
@@ -195,11 +345,23 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 32,
       "metadata": {
-        "id": "ZkQPwkQcfSE6"
+        "id": "ZkQPwkQcfSE6",
+        "outputId": "5f142f21-2b11-4849-c478-18e114e62942",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "True False\n"
+          ]
+        }
+      ],
       "source": [
         "# We can compare numbers using the following operations\n",
         "# >=, <=, ==\n",
@@ -210,11 +372,23 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 33,
       "metadata": {
-        "id": "N0KWxm28fSE6"
+        "id": "N0KWxm28fSE6",
+        "outputId": "819cc754-638f-4985-c750-538f69d64968",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "True\n"
+          ]
+        }
+      ],
       "source": [
         "# These results are stored as booleans which can\n",
         "# be accessed directly with the keyword arguments \"True\" and \"False\"\n",
@@ -223,22 +397,48 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 34,
       "metadata": {
-        "id": "ErrsI4p1fSE6"
+        "id": "ErrsI4p1fSE6",
+        "outputId": "f98542a4-710f-474c-af26-12deb5a6c470",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "True\n"
+          ]
+        }
+      ],
       "source": [
         "print(bool2 == False)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 38,
       "metadata": {
-        "id": "8uXuEBWdfSE6"
+        "id": "8uXuEBWdfSE6",
+        "outputId": "0e010d29-0be1-4073-e89a-e3a34f090707",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "the condition was false!\n",
+            "False\n",
+            "the is the last line of code in the block\n"
+          ]
+        }
+      ],
       "source": [
         "# We can use booleans to make conditional code.\n",
         "a = 3\n",
@@ -246,25 +446,66 @@
         "c = 5\n",
         "response = None\n",
         "\n",
-        "if a*b > c: # if true then run the code right after it\n",
+        "if a*b <= c: # if true then run the code right after it\n",
         "    response = True\n",
+        "    print(\"the condition was true!\")\n",
         "else:      # if the condition above isn't true, do this instead.\n",
         "    response = False\n",
-        "response"
+        "    print(\"the condition was false!\")\n",
+        "print(response)\n",
+        "print(\"the is the last line of code in the block\")"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 39,
       "metadata": {
-        "id": "dbm4ssEIfSE7"
+        "id": "dbm4ssEIfSE7",
+        "outputId": "2cb2211d-3d0a-4558-dc4c-caf297ec1661",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "False"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 39
+        }
+      ],
       "source": [
         "# but we could have done this with fewer lines of code.\n",
-        "response = a*b > c\n",
+        "response = a*b <= c\n",
         "response\n",
         "# see how much easier that is to read!"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Write an if statement that prints out the message \"the number is even\" if a variable is even, and \"the number is odd\" if the number is odd\n"
+      ],
+      "metadata": {
+        "id": "fcemVr2Hx89Z",
+        "outputId": "86766129-0269-4e71-b2bd-9c4c920c8147",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 41,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "7 is odd!\n"
+          ]
+        }
       ]
     },
     {
@@ -278,11 +519,26 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 42,
       "metadata": {
-        "id": "Xjx8b0lWfSE7"
+        "id": "Xjx8b0lWfSE7",
+        "outputId": "7de0ca20-d669-4c1b-9a7e-952912245753",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "6"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 42
+        }
+      ],
       "source": [
         "# sometimes we want to repeat an operation until a condition is met.\n",
         "# For example. How many times do we need to divide 100 by 2 before it's smaller than 3?\n",
@@ -297,13 +553,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 43,
       "metadata": {
         "id": "T2YhpmXtfSE7",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "4a6f1e7b-ac28-4645-a501-dbc2c9e0aa9a"
+        "outputId": "df38d0d1-d079-4f7d-ab1e-ac8c025a4315"
       },
       "outputs": [
         {
@@ -325,7 +581,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 6
+          "execution_count": 43
         }
       ],
       "source": [
@@ -341,11 +597,26 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 44,
       "metadata": {
-        "id": "uFOZlGvFfSE8"
+        "id": "uFOZlGvFfSE8",
+        "outputId": "2c74c94b-e617-40e4-bd67-2cad911b6db9",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[2, 4, 6, 8, 10]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 44
+        }
+      ],
       "source": [
         "# As was eluded to earlier, there are good and bad ways to do things in Python\n",
         "# here's a bad way....\n",
@@ -360,14 +631,29 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 50,
       "metadata": {
-        "id": "fGRv_XpLfSE8"
+        "id": "fGRv_XpLfSE8",
+        "outputId": "f6f6fd2a-7f9d-48e2-a97f-75998cffd407",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[2, 4, 6, 8, 10]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 50
+        }
+      ],
       "source": [
         "# if you've done some stuff with c++ maybe you'd want to do it this way\n",
-        "mylist = list(range(1,7))         # \"range\" is a shorthand way of writing \"From 1 to the number just before 7\"\n",
+        "mylist = list(range(1,6))         # \"range\" is a shorthand way of writing \"From 1 to the number just before 7\"\n",
         "for i, num in enumerate(mylist):  # enumerate \"counts\" how many times we've completed a loop around the code\n",
         "    mylist[i] = num*2             # the brackets [] are an \"indexer\". They say \"get the element at position 'i'\"\n",
         "mylist"
@@ -375,15 +661,57 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "source": [
+        "mylist=list(range(1,6))\n",
+        "mylist"
+      ],
       "metadata": {
-        "id": "5xYGBJ8KfSE8"
+        "id": "wBZ-_xGW16oO",
+        "outputId": "6321300b-f4b3-407d-ae86-9008156c8679",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "execution_count": 51,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[1, 2, 3, 4, 5]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 51
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 52,
+      "metadata": {
+        "id": "5xYGBJ8KfSE8",
+        "outputId": "ff10b019-d669-417f-c73f-605cb8bd1d1a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[2, 4, 6, 8, 10]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 52
+        }
+      ],
       "source": [
         "# neither of these ways are \"pythonic\"\n",
         "# one of the hallmarks of python is how concisely we can do operations.\n",
-        "newlist = [num*2 for num in range(1,7)]\n",
+        "newlist = [num*2 for num in range(1,6)]\n",
         "newlist"
       ]
     },
