--- a/examples/Hello_World.ipynb
+++ b/examples/Hello_World.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMjZ3rTf1svxU8x48leg8gn",
+      "authorship_tag": "ABX9TyMqkrJQTrUINXWmCDQaZ0FZ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -81,7 +81,8 @@
         "# Read in housing data\n",
         "# Import pandas package\n",
         "import pandas as pd\n",
-        "housingdata=pd.read_csv('econ484/data/housingprices.csv')"
+        "housingdata=pd.read_csv('econ484/data/housingprices.csv')\n",
+        "housingdata"
       ],
       "metadata": {
         "id": "rpCUorlc6oAr"
@@ -142,7 +143,7 @@
       "cell_type": "code",
       "source": [
         "# inspect regression coefficients\n",
-        "print(lm.coef_)"
+        "print(f\"{lm.coef_[2]:.3f}\")"
       ],
       "metadata": {
         "id": "uCMp2cg3sHcZ"
@@ -152,9 +153,20 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "# print out a nice sentence that says \"the coefficient on ______ is ______\" for all x-variables in the model\n"
+      ],
       "metadata": {
         "id": "N-DC43ySsT65"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "1sicvM8aKleP"
       },
       "execution_count": null,
       "outputs": []
