--- a/examples/04_Clustering.ipynb
+++ b/examples/04_Clustering.ipynb
@@ -464,22 +464,15 @@
       "outputs": []
     },
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "83u0wMX5iQJ3"
-      },
-      "source": [
-        "###Cheat:"
-      ]
-    },
-    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "oTQvIb1ILkZb"
+        "id": "oTQvIb1ILkZb",
+        "cellView": "form"
       },
       "outputs": [],
       "source": [
+        "#@title Cheat\n",
         "# Read in some real-life data\n",
         "housedata=pd.read_csv('housingprices.csv')"
       ]
