--- a/examples/07 Classification (ROC).ipynb
+++ b/examples/07 Classification (ROC).ipynb
@@ -7,7 +7,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/brighamfrandsen/econ484/blob/master/examples/07 Classification (ROC).ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/brighamfrandsen/econ484/blob/master/examples/07%20Classification%20(ROC).ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -32,7 +32,7 @@
         "id": "6HC9aCrgH3tp"
       },
       "source": [
-        "#### Import some useful packages"
+        "# Import some useful packages"
       ]
     },
     {
@@ -58,7 +58,7 @@
         "id": "38CV5rtdH3tr"
       },
       "source": [
-        "#### Load data"
+        "# Load data"
       ]
     },
     {
@@ -69,7 +69,7 @@
       },
       "outputs": [],
       "source": [
-        "mortgagedata=pd.read_csv('./mortgage.csv')\n",
+        "mortgagedata=pd.read_csv('mortgage.csv')\n",
         "print(mortgagedata.head())\n",
         "print(\"Shape: {}\".format(str(mortgagedata.shape)))"
       ]
@@ -80,7 +80,7 @@
         "id": "ljmcLW9XOFpI"
       },
       "source": [
-        "#### Define sets of variables"
+        "# Define sets of variables"
       ]
     },
     {
@@ -103,7 +103,7 @@
         "id": "FFeclFZyQG6_"
       },
       "source": [
-        "#### Divide into test and training"
+        "# Divide into test and training"
       ]
     },
     {
@@ -116,6 +116,15 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Cheat"
+      ],
+      "metadata": {
+        "id": "6LJM-EYWjwja"
+      }
     },
     {
       "cell_type": "code",
@@ -136,7 +145,7 @@
         "id": "XEj2sl4iQPZx"
       },
       "source": [
-        "#### Fit logit on training set"
+        "# Fit logit on training set"
       ]
     },
     {
