--- a/examples/01 Python Introduction.ipynb
+++ b/examples/01 Python Introduction.ipynb
@@ -96,7 +96,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# use f-string to introduce yourself with your name:\n"
+        "# use f-string to introduce yourself with your name and age:\n"
       ],
       "metadata": {
         "id": "UcQgJ8jytsyW"
