--- a/examples/03 PCA.ipynb
+++ b/examples/03 PCA.ipynb
@@ -55,6 +55,8 @@
         "\n",
         "# Multiply\n",
         "Av = A @ v\n",
+        "print(\"A@v is: \")\n",
+        "display (Av)\n",
         "\n",
         "# Plot\n",
         "plt.axhline(0, color='k', linewidth=0.5)\n",
@@ -200,6 +202,42 @@
         "# Fit the model and display coefficients:\n",
         "\n"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Cheat"
+      ],
+      "metadata": {
+        "id": "-2hVN2s9dh8h"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Instantiate a model object:\n",
+        "\n",
+        "lm = linear_model.LinearRegression()\n",
+        "\n",
+        "# Fit the model and display coefficients:\n",
+        "lm.fit(x,y)\n",
+        "print(\"Coefficients: \")\n",
+        "lm.coef_"
+      ],
+      "metadata": {
+        "id": "2zTsM9gXdfyv"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Results"
+      ],
+      "metadata": {
+        "id": "BjheMtp0eAFf"
+      }
     },
     {
       "cell_type": "markdown",
